# adaptive-comfort

./: .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  criteria_testing.py  environment-dev.yml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
adaptive_comfort/: cli.py  criteria_testing.py
adaptive_comfort/lib/: file_operations.py  pandas_operations.py  progress_bar.py  xlsx_templater.py
book/: _toc.yml  calculation.md  conf.py  environment.yml  intro.md  tests.ipynb
book/tests/: test_max_acceptable_temp.xlsx  test_operative_temp.xlsx  test_running_mean_temp.xlsx
docs/: Makefile  README.txt  TM52.md  TM59.md  _config.yml  _docs_build_local.py  _docs_push_to_maxfordham_wiki.py  _toc.yml  api.rst  calculation.md  calculations.md  conf.py  environment.yml  index.rst  installation.rst  intro.ipynb  intro.md  make.bat  references.bib  releases.rst  tests.ipynb  usage.rst
docs/source/: adaptive_comfort.rst  modules.rst
docs/testoutputs/: test_all_criteria.xlsx  test_max_acceptable_temp.xlsx  test_running_mean_temp.xlsx
docs/tests/: dry_bulb_temperature_from_vista.txt  test_all_criteria.xlsx  test_operative_temp.xlsx  test_running_mean_temp.xlsx
lib/: datamine_functions.py
src/: __init__.py
src/adaptive_comfort/: __init__.py  _version.py  adaptive_comfort.py  constants.py  criteria_testing.py  data_objs.py  datamine_functions.py  equations.py  ies_calcs.py  tm52.py  (+5 more)
tests/: __init__.py  constants.py  test_adaptive_comfort.py  test_tm52.py  test_tm59.py
(+100 files in other folders)
