[metadata]
name = adaptive-comfort
version = 0.1.1
author = Oliver James Hensby
author_email = o.hensby@maxfordham.com
description = This package assesses the thermal comfort of a space within a building against the Criterion defined in CIBSE TM52 and TM59.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxfordham/adaptive-comfort
project_urls =
    Bug Tracker = https://github.com/maxfordham/adaptive-comfort/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4.5
install_requires = 
    pandas
	numpy
	xlsxwriter

[options.packages.find]
where = src

[options.extras_require]
test = 
    pytest
